...
                                    return false;
                                  }
                                  return true;
                                }, builder: (context, state) {
                                  if (state is StatusReceived) {
                                    return ElevatedButton(
                                      key: Key('watchlist_btn'),
                                      onPressed: () async {
                                        if (!state.status) {
                                          context
                                              .read<MovieDetailWatchlistBloc>()
                                              .add(AddWatchlist(movie));
                                        } else {
...
                                      return Container(
                                        height: 150,
                                        child: state.movieRecommendations
                                                    .length >
                                                0
                                            ? ListView.builder(
                                                key: Key('recommendations_lv'),
                                                scrollDirection:
                                                    Axis.horizontal,
                                                itemBuilder: (context, index) {
                                                  final movie = state
                                                          .movieRecommendations[
                                                      index];
...
        Padding(
          padding: const EdgeInsets.all(8.0),
          child: CircleAvatar(
            backgroundColor: kRichBlack,
            foregroundColor: Colors.white,
            child: IconButton(
              key: Key('back_button'),
              icon: Icon(Icons.arrow_back),
              onPressed: () {
                Navigator.pop(context);
              },
            ),
          ),
...
